# qa_guru_5

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: user.py
model/pages/: student_registration_form.py
tests/: conftest.py  test_registration_high_level.py  test_registration_mid_level.py  test_student_registration_form.py
